Revise technologies section in portfolio: update content and styling for improved presentation

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </button>
 
                 <nav id="site-nav" class="nav" data-nav>
-          <a href="#skills">Skills</a>
+          <a href="#technologies">Technologies</a>
           <a href="#experience">Experience</a>
           <a href="#projects">Projects</a>
           <a href="#contact">Contact</a>
@@ -66,45 +66,73 @@
         </div>
       </section>
 
-      <!-- SKILLS -->
-      <section id="skills" class="section">
+      <!-- TECHNOLOGIES -->
+      <section id="technologies" class="section technologies">
         <div class="container">
-          <h2>Skills</h2>
-          <p class="section-subtitle">Selected tools and technologies.</p>
-
-          <div class="card">
-            <div class="pill-row">
-              <span class="pill">NixOS</span>
-              <span class="pill">Linux</span>
-
-              <span class="pill">Unity</span>
-              <span class="pill">C#</span>
-              <span class="pill">Steam</span>
-
-              <span class="pill">Rust</span>
-              <span class="pill">.NET</span>
-              <span class="pill">ASP.NET Core</span>
-              <span class="pill">ASP.NET MVC</span>
-              <span class="pill">PostgreSQL</span>
-              <span class="pill">MySQL</span>
-              <span class="pill">PHP</span>
-              <span class="pill">Mirror</span>
-
-              <span class="pill">HTML</span>
-              <span class="pill">CSS</span>
-              <span class="pill">JavaScript</span>
-              <span class="pill">CLI/TUI</span>
-              <span class="pill">Bash</span>
-              <span class="pill">Python</span>
-              <span class="pill">JSON</span>
-              <span class="pill">Cross-platform</span>
-              <span class="pill">React Native</span>
-              <span class="pill">Android</span>
-              <span class="pill">Java</span>
-            </div>
+          <h2>Technologies</h2>
+          <p class="section-subtitle">Core technologies I reach for most when shipping products.</p>
+          <div class="tech-grid">
+            <article class="card tech-card tech-primary">
+              <div class="tech-icon">C#</div>
+              <div>
+                <h3>C#</h3>
+                <p class="muted">Gameplay systems, backend services, tooling.</p>
+              </div>
+            </article>
+            <article class="card tech-card tech-primary">
+              <div class="tech-icon">ASP</div>
+              <div>
+                <h3>ASP.NET Core</h3>
+                <p class="muted">APIs and web backends for production apps.</p>
+              </div>
+            </article>
+            <article class="card tech-card tech-primary">
+              <div class="tech-icon">NET</div>
+              <div>
+                <h3>.NET</h3>
+                <p class="muted">Services, tooling, and full stack projects.</p>
+              </div>
+            </article>
+            <article class="card tech-card tech-primary">
+              <div class="tech-icon">U</div>
+              <div>
+                <h3>Unity</h3>
+                <p class="muted">Game development, UI, and gameplay loops.</p>
+              </div>
+            </article>
+            <article class="card tech-card">
+              <div class="tech-icon">JS</div>
+              <div>
+                <h3>JavaScript</h3>
+                <p class="muted">Interactive UI and frontend behavior.</p>
+              </div>
+            </article>
+            <article class="card tech-card">
+              <div class="tech-icon">JV</div>
+              <div>
+                <h3>Java</h3>
+                <p class="muted">Android apps and backend services.</p>
+              </div>
+            </article>
+            <article class="card tech-card">
+              <div class="tech-icon">PG</div>
+              <div>
+                <h3>PostgreSQL</h3>
+                <p class="muted">Relational data modeling and queries.</p>
+              </div>
+            </article>
+            <article class="card tech-card">
+              <div class="tech-icon">RS</div>
+              <div>
+                <h3>Rust</h3>
+                <p class="muted">CLI tools and performance-focused systems.</p>
+              </div>
+            </article>
           </div>
+          <p class="tech-note muted">Other tools show up where they matter most: inside each project.</p>
         </div>
       </section>
+
       <!-- EXPERIENCE -->
       <section id="experience" class="section">
         <div class="container">
