--- a/resume.html
+++ b/resume.html
@@ -80,23 +80,24 @@
       <div>Email: <a href="mailto:walberh96@yahoo.com">walberh96@yahoo.com</a></div>
       <div>GitHub: <a href="https://github.com/walberh96">github.com/walberh96</a></div>
       <div>LinkedIn: <a href="https://www.linkedin.com/in/walberh96/">linkedin.com/in/walberh96</a></div>
+      <div>LeetCode: <a href="https://leetcode.com/u/willwitcher/">leetcode.com/u/willwitcher</a></div>
     </div>
 
     <h2>Summary</h2>
     <p class="summary">
       Full stack engineer with deep experience building and shipping interactive experiences. Strong background in backend
       services, full stack web development, game development, APIs, and automation with Linux-first workflows. Proven in
-      delivering cross-platform products and developer tools, with hands-on experience in Java, JavaScript, React, Node.js,
-      C#, .NET, Rust, and PostgreSQL.
+      delivering cross-platform products and developer tools, with hands-on experience in GraphQL, React, Docker, Java,
+      JavaScript, Node.js, C#, .NET, Rust, and PostgreSQL.
     </p>
 
     <h2>Skills</h2>
     <div class="skills">
       <span>NixOS</span><span>Linux</span><span>Unity</span><span>C#</span><span>Steam</span><span>Rust</span>
       <span>.NET</span><span>ASP.NET Core</span><span>ASP.NET MVC</span><span>PostgreSQL</span><span>MySQL</span>
-      <span>PHP</span><span>Mirror</span><span>HTML</span><span>CSS</span><span>JavaScript</span><span>CLI/TUI</span>
-      <span>Bash</span><span>Python</span><span>JSON</span><span>Cross-platform</span><span>React Native</span>
-      <span>Android</span><span>Java</span>
+      <span>PHP</span><span>Mirror</span><span>HTML</span><span>CSS</span><span>JavaScript</span><span>React</span>
+      <span>GraphQL</span><span>Docker</span><span>CLI/TUI</span><span>Bash</span><span>Python</span><span>JSON</span>
+      <span>Cross-platform</span><span>React Native</span><span>Android</span><span>Java</span>
     </div>
 
     <h2>Projects</h2>
