Refine contact actions layout and enhance button styles for improved accessibility and aesthetics

--- a/index.html
+++ b/index.html
@@ -407,22 +407,6 @@
         </div>
       </section>
 
-      <!-- CODING PROFILES -->
-      <section id="profiles" class="section">
-        <div class="container">
-          <h2>Check My Code</h2>
-          <p class="section-subtitle">Explore my repositories and problem-solving practice.</p>
-
-          <div class="contact-grid">
-            <div class="card profiles-cta">
-              <div class="hero-actions hero-actions-compact">
-                <a class="btn" href="https://github.com/walberh96" target="_blank" rel="noreferrer">GitHub</a>
-                <a class="btn" href="https://leetcode.com/u/willwitcher/" target="_blank" rel="noreferrer">LeetCode</a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
 
       <!-- CONTACT -->
       <section id="contact" class="section">
@@ -446,9 +430,23 @@
                   </a>
                 </li>
               </ul>
-            </div>          </div>
+            </div>
+          </div>
 
           <div class="hero-actions contact-actions">
+            <a
+              class="btn btn-ghost btn-icon"
+              href="https://github.com/walberh96"
+              target="_blank"
+              rel="noreferrer"
+              aria-label="GitHub"
+            >
+              <svg viewBox="0 0 24 24" aria-hidden="true" focusable="false">
+                <path
+                  d="M12 0.5c-6.63 0-12 5.37-12 12 0 5.3 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61-.546-1.387-1.333-1.756-1.333-1.756-1.09-.745.083-.73.083-.73 1.205.085 1.84 1.236 1.84 1.236 1.07 1.835 2.807 1.305 3.492.998.108-.776.418-1.305.76-1.605-2.665-.305-5.466-1.332-5.466-5.93 0-1.31.468-2.38 1.235-3.22-.123-.304-.535-1.53.117-3.185 0 0 1.008-.322 3.3 1.23.957-.266 1.983-.4 3.003-.405 1.02.005 2.047.139 3.006.405 2.29-1.552 3.296-1.23 3.296-1.23.653 1.655.242 2.881.119 3.185.77.84 1.233 1.91 1.233 3.22 0 4.61-2.805 5.624-5.476 5.921.43.37.814 1.096.814 2.21 0 1.595-.014 2.88-.014 3.27 0 .32.216.694.825.576C20.565 22.296 24 17.796 24 12.5c0-6.63-5.37-12-12-12z"
+                />
+              </svg>
+            </a>
             <a class="btn btn-ghost" href="resume.pdf" download>Download Resume (PDF)</a>
           </div>
 
