Update technologies section: replace Rust with Godot and revise description for clarity

--- a/index.html
+++ b/index.html
@@ -137,11 +137,11 @@
             </article>
             <article class="card tech-card">
               <div class="tech-icon">
-                <img class="tech-icon-img" src="icons/rust.svg" alt="Rust" />
+                <span class="tech-icon-text">Godot</span>
               </div>
               <div>
-                <h3>Rust</h3>
-                <p class="muted">CLI tools and performance-focused systems.</p>
+                <h3>Godot</h3>
+                <p class="muted">Indie game development and rapid prototyping.</p>
               </div>
             </article>
             <article class="card tech-card">
@@ -461,7 +461,6 @@
     <script src="script.js"></script>
   </body>
 </html>
-
 
 
 
