--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             </article>
             <article class="card tech-card">
               <div class="tech-icon">
-                <span class="tech-icon-text">Godot</span>
+                <img class="tech-icon-img" src="icons/godot.svg" alt="Godot" />
               </div>
               <div>
                 <h3>Godot</h3>
