--- a/resume.html
+++ b/resume.html
@@ -80,7 +80,6 @@
       <div>Email: <a href="mailto:walberh96@yahoo.com">walberh96@yahoo.com</a></div>
       <div>GitHub: <a href="https://github.com/walberh96">github.com/walberh96</a></div>
       <div>LinkedIn: <a href="https://www.linkedin.com/in/walberh96/">linkedin.com/in/walberh96</a></div>
-      <div>LeetCode: <a href="https://leetcode.com/u/willwitcher/">leetcode.com/u/willwitcher</a></div>
     </div>
 
     <h2>Summary</h2>
@@ -88,7 +87,7 @@
       Full stack engineer with deep experience building and shipping interactive experiences. Strong background in backend
       services, full stack web development, game development, APIs, and automation with Linux-first workflows. Proven in
       delivering cross-platform products and developer tools, with hands-on experience in GraphQL, React, Docker, Java,
-      JavaScript, Node.js, C#, .NET, Rust, and PostgreSQL.
+      JavaScript, Node.js, C#, .NET, Godot, and PostgreSQL.
     </p>
 
     <h2>Skills</h2>
