Update resume and project sections

--- a/index.html
+++ b/index.html
@@ -146,11 +146,11 @@
             </article>
             <article class="card tech-card">
               <div class="tech-icon">
-                <img class="tech-icon-img" src="icons/graphql.svg" alt="GraphQL" />
+                <img class="tech-icon-img" src="icons/nextjs.svg" alt="Next.js" />
               </div>
               <div>
-                <h3>GraphQL</h3>
-                <p class="muted">Flexible APIs for product-ready data.</p>
+                <h3>Next.js</h3>
+                <p class="muted">Full-stack React apps with routing and SSR.</p>
               </div>
             </article>
             <article class="card tech-card">
@@ -284,30 +284,6 @@
               </div>
             </article>
 
-            <!-- Warframe Utils .NET -->
-            <article class="card project">
-              <div class="project-top">
-                <h3>Warframe Utils (.NET)</h3>
-                <span class="badge">Web App</span>
-              </div>
-
-              <p class="muted">
-                A set of tools for Warframe players that combines useful info about current game events with Warframe Market
-                prices for desired mods and items.
-              </p>
-
-              <div class="pill-row">
-                <span class="pill">C#</span>
-                <span class="pill">Rust</span>
-                <span class="pill">.NET</span>
-                <span class="pill">ASP.NET MVC</span>
-              </div>
-
-              <div class="project-links">
-                <a class="link" href="https://github.com/walberh96/Warframe-Utils-.NET" target="_blank" rel="noreferrer">
-                  GitHub -></a>
-              </div>
-            </article>
             <!-- FitRPG -->
             <article class="card project">
               <div class="project-top">
@@ -329,54 +305,6 @@
 
               <div class="project-links">
                 <a class="link" href="https://github.com/walberh96/FitRPG" target="_blank" rel="noreferrer">
-                  GitHub -></a>
-              </div>
-            </article>
-            <!-- Waycast -->
-            <article class="card project">
-              <div class="project-top">
-                <h3>Waycast</h3>
-                <span class="badge">TUI Tool</span>
-              </div>
-
-              <p class="muted">
-                A cross-platform Rust TUI that turns scripts into shareable packages with manifests, validation, and dependency
-                installs for reliable runs.
-              </p>
-
-              <div class="pill-row">
-                <span class="pill">Rust</span>
-                <span class="pill">CLI/TUI</span>
-                <span class="pill">Bash</span>
-                <span class="pill">Python</span>
-                <span class="pill">Cross-platform</span>
-                <span class="pill">JSON</span>
-              </div>
-
-              <div class="project-links">
-                <a class="link" href="https://github.com/walberh96/Waycast" target="_blank" rel="noreferrer">
-                  GitHub -></a>
-              </div>
-            </article>
-            <!-- WillwitcherOS -->
-            <article class="card project">
-              <div class="project-top">
-                <h3>WillwitcherOS</h3>
-                <span class="badge">OS Configuration</span>
-              </div>
-
-              <p class="muted">
-                An opinionated NixOS installation inspired by "Arch-like" workflows - keeping the feel of Arch while staying Nix-based and reproducible (unbreakable).
-              </p>
-
-              <div class="pill-row">
-                <span class="pill">NixOS</span>
-                <span class="pill">Linux</span>
-                <span class="pill">Reproducible Setup</span>
-              </div>
-
-              <div class="project-links">
-                <a class="link" href="https://github.com/walberh96/willwitcher-OS-Endgame" target="_blank" rel="noreferrer">
                   GitHub -></a>
               </div>
             </article>
@@ -461,7 +389,6 @@
     <script src="script.js"></script>
   </body>
 </html>
-
 
 
 
