--- a/resume.html
+++ b/resume.html
@@ -86,7 +86,7 @@
     <p class="summary">
       Full stack engineer with deep experience building and shipping interactive experiences. Strong background in backend
       services, full stack web development, game development, APIs, and automation with Linux-first workflows. Proven in
-      delivering cross-platform products and developer tools, with hands-on experience in GraphQL, React, Docker, Java,
+      delivering cross-platform products and developer tools, with hands-on experience in Next.js, React, Docker, Java,
       JavaScript, Node.js, C#, .NET, Godot, and PostgreSQL.
     </p>
 
@@ -95,7 +95,7 @@
       <span>NixOS</span><span>Linux</span><span>Unity</span><span>C#</span><span>Steam</span><span>Rust</span>
       <span>.NET</span><span>ASP.NET Core</span><span>ASP.NET MVC</span><span>PostgreSQL</span><span>MySQL</span>
       <span>PHP</span><span>Mirror</span><span>HTML</span><span>CSS</span><span>JavaScript</span><span>React</span>
-      <span>GraphQL</span><span>Docker</span><span>CLI/TUI</span><span>Bash</span><span>Python</span><span>JSON</span>
+      <span>Next.js</span><span>Docker</span><span>CLI/TUI</span><span>Bash</span><span>Python</span><span>JSON</span>
       <span>Cross-platform</span><span>React Native</span><span>Android</span><span>Java</span>
     </div>
 
@@ -106,34 +106,12 @@
       <div class="project-desc"><a href="https://store.steampowered.com/app/2719860/Solstale/">store.steampowered.com/app/2719860/Solstale</a></div>
     </div>
     <div class="project">
-      <div class="project-title">Warframe Utils (.NET) <span>Web App</span></div>
-      <div class="project-desc">
-        A toolkit for Warframe players combining event info with Warframe Market prices.
-      </div>
-      <div class="project-desc"><a href="https://github.com/walberh96/Warframe-Utils-.NET">github.com/walberh96/Warframe-Utils-.NET</a></div>
-    </div>
-    <div class="project">
       <div class="project-title">FitRPG <span>Web/Mobile/Wearable App</span></div>
       <div class="project-desc">
         A fitness-focused RPG experience turning workouts into quests, with a modern stack for web, mobile, and a Samsung
         Watch 7 companion.
       </div>
       <div class="project-desc"><a href="https://github.com/walberh96/FitRPG">github.com/walberh96/FitRPG</a></div>
-    </div>
-    <div class="project">
-      <div class="project-title">Waycast <span>TUI Tool</span></div>
-      <div class="project-desc">
-        A cross-platform Rust TUI that turns scripts into shareable packages with manifests, validation, and dependency
-        installs for reliable runs.
-      </div>
-      <div class="project-desc"><a href="https://github.com/walberh96/Waycast">github.com/walberh96/Waycast</a></div>
-    </div>
-    <div class="project">
-      <div class="project-title">WillwitcherOS <span>OS Configuration</span></div>
-      <div class="project-desc">
-        An opinionated NixOS installation inspired by Arch-like workflows, focused on reproducibility and reliability.
-      </div>
-      <div class="project-desc"><a href="https://github.com/walberh96/willwitcher-OS-Endgame">github.com/walberh96/willwitcher-OS-Endgame</a></div>
     </div>
     <div class="project">
       <div class="project-title">IV Plumbing Solutions <span>Website</span></div>
