Add Warframe Utils .NET project to portfolio

--- a/index.html
+++ b/index.html
@@ -308,6 +308,33 @@
                   GitHub -></a>
               </div>
             </article>
+
+            <!-- Warframe Utils .NET -->
+            <article class="card project">
+              <div class="project-top">
+                <h3>Warframe Utils .NET</h3>
+                <span class="badge">Web App</span>
+              </div>
+
+              <p class="muted">
+                A web-based utility application built with ASP.NET Core 8.0 that helps Warframe players access real-time market prices, game status information, and mod trading data. Integrates with Warframe Market API and Warframe Status API.
+              </p>
+
+              <div class="pill-row">
+                <span class="pill">ASP.NET Core 8.0</span>
+                <span class="pill">Entity Framework Core</span>
+                <span class="pill">SQL Server</span>
+                <span class="pill">Bootstrap 5</span>
+                <span class="pill">JavaScript</span>
+                <span class="pill">API Integration</span>
+              </div>
+
+              <div class="project-links">
+                <a class="link" href="https://github.com/walberh96/Warframe-Utils-.NET" target="_blank" rel="noreferrer">
+                  GitHub -></a>
+              </div>
+            </article>
+
             <!-- IV Plumbing Solutions website -->
             <article class="card project">
               <div class="project-top">
