Refactor technology and project descriptions for clarity and detail

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
               </div>
               <div>
                 <h3>Next.js</h3>
-                <p class="muted">Full-stack React apps with routing and SSR.</p>
+                <p class="muted">Full-stack React apps, routing, and SSR.</p>
               </div>
             </article>
             <article class="card tech-card">
@@ -159,16 +159,25 @@
               </div>
               <div>
                 <h3>React</h3>
-                <p class="muted">Component-driven web experiences.</p>
+                <p class="muted">Modern UI components and state management.</p>
               </div>
             </article>
             <article class="card tech-card">
               <div class="tech-icon">
-                <img class="tech-icon-img" src="icons/reactnative.svg" alt="React Native" />
+                <img class="tech-icon-img" src="icons/typescript.svg" alt="TypeScript" />
               </div>
               <div>
-                <h3>React Native</h3>
-                <p class="muted">Shared UI for mobile and wearable apps.</p>
+                <h3>TypeScript</h3>
+                <p class="muted">Type-safe JavaScript for scalable apps.</p>
+              </div>
+            </article>
+            <article class="card tech-card">
+              <div class="tech-icon">
+                <img class="tech-icon-img" src="icons/tailwindcss.svg" alt="Tailwind CSS" />
+              </div>
+              <div>
+                <h3>Tailwind CSS</h3>
+                <p class="muted">Utility-first styling for modern interfaces.</p>
               </div>
             </article>
             <article class="card tech-card">
@@ -284,49 +293,28 @@
               </div>
             </article>
 
-            <!-- FitRPG -->
-            <article class="card project">
-              <div class="project-top">
-                <h3>FitRPG</h3>
-                <span class="badge">Web/Mobile/Wearable App</span>
-              </div>
-
-              <p class="muted">
-                A fitness-focused RPG experience that turns workouts into quests, rewards, and progression. Remake in progress
-                with a modern stack for web, mobile, and a Samsung Watch 7 companion, backed by a starter ASP.NET Core API.
-              </p>
-              <div class="pill-row">
-                <span class="pill">ASP.NET Core</span>
-                <span class="pill">React Native</span>
-                <span class="pill">Android</span>
-                <span class="pill">Java</span>
-                <span class="pill">PostgreSQL</span>
-              </div>
-
-              <div class="project-links">
-                <a class="link" href="https://github.com/walberh96/FitRPG" target="_blank" rel="noreferrer">
-                  GitHub -></a>
-              </div>
-            </article>
-
             <!-- Warframe Utils .NET -->
             <article class="card project">
               <div class="project-top">
                 <h3>Warframe Utils .NET</h3>
-                <span class="badge">Web App</span>
+                <span class="badge">Full-Stack App</span>
               </div>
 
               <p class="muted">
-                A web-based utility application built with ASP.NET Core 8.0 that helps Warframe players access real-time market prices, game status information, and mod trading data. Integrates with Warframe Market API and Warframe Status API.
+                A decoupled full-stack application helping Warframe players with real-time market prices, trading orders, game status monitoring, and price alert notifications. Features a modern dark-mode UI, responsive design, and background service monitoring.
               </p>
 
               <div class="pill-row">
                 <span class="pill">ASP.NET Core 8.0</span>
                 <span class="pill">Entity Framework Core</span>
-                <span class="pill">SQL Server</span>
-                <span class="pill">Bootstrap 5</span>
-                <span class="pill">JavaScript</span>
-                <span class="pill">API Integration</span>
+                <span class="pill">PostgreSQL</span>
+                <span class="pill">Next.js 14</span>
+                <span class="pill">React 18</span>
+                <span class="pill">TypeScript</span>
+                <span class="pill">Tailwind CSS</span>
+                <span class="pill">shadcn/ui</span>
+                <span class="pill">REST APIs</span>
+                <span class="pill">Background Services</span>
               </div>
 
               <div class="project-links">
@@ -350,7 +338,6 @@
                 <span class="pill">HTML</span>
                 <span class="pill">CSS</span>
                 <span class="pill">JavaScript</span>
-              <span class="pill">CLI/TUI</span>
               </div>
 
               <div class="project-links">
