Replace TypeScript icon image with text abbreviation in technologies section

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             </article>
             <article class="card tech-card">
               <div class="tech-icon">
-                <img class="tech-icon-img" src="icons/typescript.svg" alt="TypeScript" />
+                <span class="tech-icon-text">TS</span>
               </div>
               <div>
                 <h3>TypeScript</h3>
